# card_deck_manager_demo

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: lint_build_check_version.yaml
games/blackjack/: __init__.py  main.py
games/war/: __init__.py  main.py  war_game.py
