[project]
name = "card_deck_manager_demo"
version = "0.0.0"
authors = [
  { name="Losson Simon", email="simon.losson@student.junia.com" },
]
description = "Some games created with the card_deck_manager package."
requires-python = ">=3.9"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "T20",  # Print
    "D203",  # Incorrect blank line before class
    "D212",  # Multi line summary second line
]
